Reproducible crash: Edges + Array Mod + Hair Particles #48088

Closed
opened 2016-04-08 11:34:04 +02:00 by Gottfried Hofmann · 5 comments

System Information
OS: Windows 7 (64 Bit)
CPU: Intel i5-2500 3.30GHz
GFX: nVidea GeForce GTX 650 Ti
RAM: 8 GB

Confirmed on Ubuntu 64bit Geforece 580 GTX

Blender Version
Broken:
Blender 2.77 (2016-03-18 12:34 / Hash: 22a2853)
Blender 2.77a official

Exact steps for others to reproduce the error

Blender application closes immediately after the following procedure:

  Create Plane
  Enter "Edit Mode"
  Delete "Only Faces"
  Enter "Object Mode"
  "Add Modifier" "Array" (Count: 2; Relative Offset: 1)
  Add new Particle System
  Switch Type "Emitter" to "Hair"
  Blender-Task closes

Got this report by e-mail and confirmed it on my machine with 2.77a

**System Information** OS: Windows 7 (64 Bit) CPU: Intel i5-2500 3.30GHz GFX: nVidea GeForce GTX 650 Ti RAM: 8 GB Confirmed on Ubuntu 64bit Geforece 580 GTX **Blender Version** Broken: Blender 2.77 (2016-03-18 12:34 / Hash: 22a2853) Blender 2.77a official **Exact steps for others to reproduce the error** Blender application closes immediately after the following procedure: ``` Create Plane Enter "Edit Mode" Delete "Only Faces" Enter "Object Mode" "Add Modifier" "Array" (Count: 2; Relative Offset: 1) Add new Particle System Switch Type "Emitter" to "Hair" Blender-Task closes ``` Got this report by e-mail and confirmed it on my machine with 2.77a

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Gottfried Hofmann 2016-04-08 11:34:04 +02:00

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann
Campbell Barton was unassigned by Bastien Montagne 2016-04-08 14:26:07 +02:00
Bastien Montagne self-assigned this 2016-04-08 14:26:07 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by c1d1c1dc6b

This issue was referenced by c1d1c1dc6b9b1e3d01ea9b8acacd235c1a357500

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48088
No description provided.